<resources>

    <!-- Common -->
    <string name="app_name">Ziggeo demo. Native (Kotlin)</string>
    <string name="ok">OK</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="common_confirm_message">Are you sure?</string>
    <string name="err_common">Something wrong happened. Please, try again.</string>
    <string name="err_not_empty">Field should not be empty.</string>

    <!-- Auth screen -->
    <string name="auth_message">Please go to ziggeo.com/quickstart on your desktop or laptop and scan QR code. This will allow you to connect your desktop and mobile demo experience</string>
    <string name="btn_scan_qr_text">Scan QR code</string>
    <string name="btn_use_entered_text">Use entered</string>
    <string name="enter_qr_manually_text">or enter manually</string>
    <string name="enter_manually_hint">Application token</string>
    <string name="use_scanner_text">or use scanner</string>

    <!-- Drawer -->
    <string name="title_app_token">Application token:</string>
    <string name="item_recordings">Recordings</string>
    <string name="item_settings">Settings</string>
    <string name="item_sdks">Available SDKs</string>
    <string name="item_clients">Top clients</string>
    <string name="item_contact">Contact us</string>
    <string name="item_about">About</string>
    <string name="item_log">Log</string>
    <string name="item_video_editor">Video Editor</string>

    <!-- Logout confirmation -->
    <string name="logout_message">Are you sure you want to log out?</string>

    <!-- Recordings screen -->
    <string name="recordings_header">Recordings</string>
    <string name="err_check_indexing">It\'s possible you\'ve forgotten to allow index operation. Please, check app settings on the website.</string>
    <string name="message_recordings_list_empty">There are no recordings.\nPress plus button to add some.</string>

    <!-- Settings screen -->
    <string name="settings_header">Common settings</string>
    <string name="common_settings">Common \n settings</string>
    <string name="hint_start_delay">Start delay (seconds)</string>
    <string name="btn_save">Save</string>
    <string name="successfully_saved_message">Saved</string>
    <string name="use_custom_camera">Use custom camera</string>
    <string name="use_custom_player">Use custom player</string>
    <string name="use_lur_mode">Use blur mode</string>
    <string name="show_face_outline">Show face outline</string>
    <string name="hint_max_duration">Max duration (seconds)</string>
    <string name="video_quality_high">Quality high</string>
    <string name="video_quality_medium">Quality medium</string>
    <string name="video_quality_low">Quality low</string>
    <string name="video_quality">Video quality</string>
    <string name="is_live_streaming">Is live streaming</string>
    <string name="autostart_recording">Autostart recording</string>
    <string name="image_only_Mode">Image only mode</string>
    <string name="send_immediately">Send immediately</string>
    <string name="disable_camera_switch">Disable camera switch</string>
    <string name="enable_cover_shot">Enable cover shot</string>
    <string name="confirm_stop_recording">Confirm stop Recording</string>
    <string name="video_bitrate">Video bitrate(Kbps)</string>
    <string name="audio_bitrate">Audio bitrate(Kbps)</string>
    <string name="audio_sample_rate">Audio sample rate(KHz)</string>
    <string name="facing_back">Facing back</string>
    <string name="facing_front">Facing front</string>
    <string name="facing">Use facing</string>
    <string name="recorder_Config">Recorder config:</string>
    <string name="recorder_config_title">Recorder config</string>
    <string name="recorder_config">Recorder\n\tconfig </string>
    <string name="show_subtitles">Show subtitles</string>
    <string name="player_config_title">Player config</string>
    <string name="player_config">Player \nconfig</string>
    <string name="is_muted">Is muted:</string>
    <string name="is_caching_enabled">Is caching enabled</string>
    <string name="should_preload">Preload</string>
    <string name="ads_uri">adsUri</string>
    <string name="file_selector_Config">File selector config :</string>
    <string name="should_allow_multiple_selection">Allow multiple selection</string>
    <string name="media_type_video">Video</string>
    <string name="media_type_audio">Audio</string>
    <string name="media_type_image">Image</string>
    <string name="media_type">Media Type</string>
    <string name="qr_scanner_config">Qr scanner config:</string>
    <string name="close_after_successful_scan">Close after successful Scan</string>
    <string name="uploading_config">Uploading config:</string>
    <string name="turn_off_uploader">Turn off uploader</string>
    <string name="use_wifi_only">Use wifi only</string>
    <string name="start_as_foreground">Start as foreground</string>
    <string name="sync_interval">Sync interval</string>
    <string name="stop_recording_confirmation_dialog_config">
        Stop recording confirmation dialog config:</string>
    <string name="title_text">Title text</string>
    <string name="mes_text">Mes text</string>
    <string name="pos_btn_text">Pos btn text</string>
    <string name="neg_btn_text">Neg btn text</string>

    <!-- Log screen -->
    <string name="log_header">Log</string>
    <string name="message_log_empty">There are no logs.</string>

    <!-- SDKs screen -->
    <string name="sdks_header">Available SDKs</string>

    <!-- Clients screen -->
    <string name="clients_header">Top Clients</string>

    <!-- Logs screen -->
    <string name="btn_send_report">Send report</string>
    <string name="log_write_permission_rationale">The app need write permission to save log info.</string>

    <!-- Contact screen -->
    <string name="contact_header">Contact us</string>
    <string name="contact_title">Stay in touch</string>
    <string name="contact_message">Do you have a question about Ziggeo?\nWondering how you can start using Ziggeo?\nWish to get in touch with someone to see how you can start using Ziggeo tomorrow?\nIf you are ready to start a video revolution of your website / service / app or system, click on the Contact Us button to send us an email, or visit our support base to find answers or ask us there.</string>
    <string name="btn_contact_us">Contact Us</string>
    <string name="btn_visit_support">Visit Support</string>

    <!-- Recording details screen -->
    <string name="details_header">Details</string>
    <string name="hint_token_or_key">Token or key</string>
    <string name="hint_title">Title for the recording (optional)</string>
    <string name="hint_description">Description for the recording (optional)</string>

    <!-- About screen -->
    <string name="about_header">About</string>
    <string name="about_title">Thanks for trying our demo!</string>
    <string name="about_text">
        \nVisit &lt;a href=https://github.com/Ziggeo/Android-Client-SDK>GitHub&lt;/a> if you want to star us or just to see the sources
        \n\nYou might also want to take a look at other sections.
        \n\nLearn:
        \n- &lt;a href=https://ziggeo.com/quickstart>Quick start&lt;/a>
        \n- &lt;a href=https://ziggeo.com/screencasts>Screencasts&lt;/a>
        \n- &lt;a href=https://ziggeo.com/webinars>Webinars&lt;/a>
        \n\nReference:
        \n- &lt;a href=https://ziggeo.com/docs>Documentation&lt;/a>
        \n- &lt;a href=https://support.ziggeo.com/>FAQs&lt;/a>
        \n- &lt;a href=https://ziggeo.com/integrations>Integrations&lt;/a>
        \n\nSandboxes
        \n- &lt;a href=https://ziggeo.com/sandbox/configuration>Configuration&lt;/a>
        \n- &lt;a href=https://ziggeo.com/sandbox/serverside>Server-Side&lt;/a>
        \n- &lt;a href=https://ziggeo.com/sandbox/authorization-tokens>Authorization Tokens&lt;/a>
        \n- &lt;a href=https://ziggeo.com/sandbox/webhooks>Webhooks Builder&lt;/a>
        \n\nCommunity
        \n- &lt;a href=https://support.ziggeo.com/hc/en-us/community/posts>Forum&lt;/a>
        \n- &lt;a href=https://stackoverflow.com/search?q=ziggeo>StackOverflow&lt;/a>
        \n\nSupport
        \n- &lt;a href=mailto:support@ziggeo.com>Support&lt;/a>
        \n- &lt;a href=https://ziggeo.com/dev-updates>Dev Updates&lt;/a>
    </string>

    <!-- Video Editor -->
    <string name="video_editor_header">Video editor</string>
    <string name="btn_select_file_text">Select file to cut</string>
    <string name="read_storage_permission_message">The app needs access to read files.</string>
    <string name="cut_video_saved_to">Video saved to: %s</string>
    <string name="video_chooser_title">Select video</string>

    <!-- Fullscreen recorder -->
    <string name="btn_text_start_camera_recorder">Press me to start camera recorder</string>

    <!-- Recorder events -->
    <string name="ev_rec_loaded">Recorder: loaded</string>
    <string name="ev_rec_manuallySubmitted">Recorder: manually submitted</string>
    <string name="ev_rec_recordingStarted">Recorder: recording started</string>
    <string name="ev_rec_recordingStopped">Recording stopped</string>
    <string name="ev_rec_countdown">Recorder: countdown</string>
    <string name="ev_rec_recordingProgress">Recorder: recording progress</string>
    <string name="ev_rec_readyToRecord">Recorder: ready to record</string>
    <string name="ev_rec_accessForbidden">Recorder: access forbidden</string>
    <string name="ev_rec_accessGranted">Recorder: access granted</string>
    <string name="ev_rec_noCamera">Recorder: no camera</string>
    <string name="ev_rec_noMicrophone">Recorder: no microphone</string>
    <string name="ev_rec_hasCamera">Recorder: has camera</string>
    <string name="ev_rec_hasMicrophone">Recorder: has microphone</string>
    <string name="ev_rec_microphoneHealth">Recorder: microphone health</string>
    <string name="ev_rec_canceledByUser">Recorder: canceled by user</string>
    <string name="ev_rec_error">Recorder: error</string>
    <string name="ev_rec_streamingStarted">Recorder: streaming started</string>
    <string name="ev_rec_streamingStopped">Recorder: streaming stopped</string>

    <!-- Player events -->
    <string name="ev_pl_loaded">Player: loaded</string>
    <string name="ev_pl_accessForbidden">Player: access forbidden</string>
    <string name="ev_pl_accessGranted">Player: access granted</string>
    <string name="ev_pl_canceledByUser">Player: canceled by user</string>
    <string name="ev_pl_error">Player: error</string>
    <string name="ev_pl_playing">Player: playing</string>
    <string name="ev_pl_paused">Player: paused</string>
    <string name="ev_pl_ended">Player: ended</string>
    <string name="ev_pl_seek">Player: seek</string>
    <string name="ev_pl_readyToPlay">Player: ready to play</string>

    <!-- Uploader events -->
    <string name="ev_upl_uploaded">Uploader: uploaded</string>
    <string name="ev_upl_uploadingStarted">Uploader: uploading started</string>
    <string name="ev_upl_uploadProgress">Uploader: upload progress</string>
    <string name="ev_upl_processing">Uploader: processing</string>
    <string name="ev_upl_processed">Uploader: processed</string>
    <string name="ev_upl_verified">Uploader: verified</string>
    <string name="ev_upl_error">Uploader: error</string>

    <!-- Uploader events -->
    <string name="ev_fs_loaded">FileSelector: loaded</string>
    <string name="ev_fs_accessForbidden">FileSelector: access forbidden</string>
    <string name="ev_fs_accessGranted">FileSelector: access granted</string>
    <string name="ev_fs_canceledByUser">FileSelector: canceled by user</string>
    <string name="ev_fs_uploadSelected">FileSelector: upload selected</string>
    <string name="ev_fs_error">FileSelector: error</string>

</resources>
